# hestia-mobile-shell

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/acceptance/: initial-prototype.md
docs/contracts/: agent-phone-interface.md  mobile-visual-surface.md
docs/plans/: implementation.md
docs/runbooks/: launch-prototype.md
docs/spikes/: mobile-ui-approach.md
examples/: demo-events.jsonl
packaging/: hestia-mobile-shell.desktop  hestia-mobile-shell.service
scripts/: install-user-launchers.sh  probe-runtime.sh
src/hestia_mobile_shell/: __init__.py  agent_adapter.py  ai_chat.py  app.py  assistant_socket.py  control.py  demo.py  fake_phone.py  mock_socket.py  state.py
tests/: test_agent_adapter.py  test_agent_contract_docs.py  test_ai_chat.py  test_assistant_socket.py  test_control.py  test_debug_chat.py  test_demo.py  test_fake_phone.py  test_materials.py  test_mock_socket.py  test_state.py
